style.css
*{
    margin: 0;
    padding: 0;
}

:root{
  --font-type-one:"Inter", sans-serif;

  --font-size-smallest: 12px;
  --font-size-small: 14px;
  --font-size-medium: 16px;

  --large-font-size: 18px;
  --largeest-font-size:42px;

  --text-color-dark: #000;
  --text-grey-color: #363636;

  --primary-color: #0094db;
  --primary-light-color: #80c9ed;
}

html{
    scroll-behavior: smooth;
}

a, p, span, div, section, ul, li, ol{
    margin: 0;
    padding: 0;
}

.section_pd_tb{
    padding: 70px 0;
}

.section_header{
    text-align: center;
    margin-bottom: 50px;
}
.section_header h2{
    font-family: var(--font-type-one);
    color: #2F2F2F;
    font-size: 38px;
    font-weight: 700;
}
.section_header span{
    color: var(--primary-color);
    font-weight: 700;
}
.section_header h3{
    font-family: var(--font-type-one);
    color: #2F2F2F;
    font-size: 32px;
    font-weight: 500;
}
.padding_added_row{
    padding: 0 120px;
}
@media screen and (max-width: 1200px){
    .padding_added_row{
        padding: 0 0;
    }
}
@media screen and (max-width: 768px){
    :root{
        --font-size-smallest: 12px;
        --font-size-small: 13px;
        --font-size-medium: 14px;

        --largeest-font-size: 24px;
      }
    .section_header h2{
        font-size: 24px;
    }
    .section_header h3{
        font-size: 20px;
    }
    .section_pd_tb{
        padding: 50px 0;
    }
    .section_header{
        margin-bottom: 40px;
    }
}


/* ====================== topbar css starts ========================= */
.topbar{
    padding: 10px 0;
    border-bottom: 2px solid #ECECEC;
}
.topbar_left{
    display: flex;
}
.topbar_left .phone_icon{
    margin-right: 10px;
    display: flex;
    align-items: center;
}
.topbar_left .phone_icon img, .topbar_left .mail_icon img{
    height: 24px;
}
.topbar_left .topbar_phone{
    display: flex;
    margin-right: 80px;
    height: fit-content;
}
.topbar_left .phone_text p{
   font-family: var(--font-type-one);
   font-size: var(--font-size-smallest);
   text-align: center;
   margin-bottom: -6px!important;
}
.topbar_left .phone_text a{
    font-family: var(--font-type-one);
    font-size: var(--font-size-small);
    font-weight: 600;
    color: var(--text-color-dark);
    text-decoration: none;
 }
.topbar_left .topbar_mail{
    display: flex;
    align-items: center;
}
.topbar_left .mail_text a{
    font-family: var(--font-type-one);
    font-size: var(--font-size-small);
    font-weight: 600;
    color: var(--text-color-dark);
    text-decoration: none;
}
.topbar_left a:hover{
   color: var(--text-grey-color);
}

.topbar_right_main{
    display: flex;
    justify-content: flex-end;
}
.topbar_right{
    display: flex;
    align-items: center;
}
.topbar_right p{
    margin-right: 12px;
    font-family: var(--font-type-one);
    font-size: var(--font-size-small);
    color: var(--text-color-dark);
    font-weight: 600;
}
.topbar_right .social_icons img{
   height: 24px;
   margin-left:6px;
}
.topbar_right .social_icons img:hover{
    opacity: 0.8;
 }
.topbar_right .social_icons img.linkedin_icon{
    height: 22px;
 }

@media screen and (max-width: 768px){
  .topbar_left .topbar_mail{
    display: none;
  }
  .topbar_left .topbar_phone {
    margin-right: 0px;
  }
}
@media screen and (max-width: 420px){
    .topbar_row{
        display: flex;
        align-items: center;
    }
    .topbar_right{
      display: block;
    }
    .topbar_right .social_icons img:nth-child(1){
        height: 20px;
        margin-left:0px;
     }
     .topbar_right .social_icons img.linkedin_icon{
        height: 18px;
     }
  }
/* ====================== topbar css ends ========================= */


/* ====================== Header css starts ========================= */
.header_section{
    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
}
.navbar_custom .header_logo img{
   height: 85px;
   width: 100%;
   object-fit: cover;
}
.navbar_ul{
    width: 100%;
    display: flex;
    justify-content: center;
}
.navbar_ul li a{
    font-family: var(--font-type-one);
    font-size: var(--font-size-medium);
    color: var(--text-color-dark)!important;
    font-weight: 500!important;
}
.navbar_ul li a:hover{
    color: var(--text-grey-color)!important;
}
.navbar_ul li a.active{
    color: var(--primary-color)!important;
}
.navbar_ul li ul li a{
    padding: 10px;
    font-family: var(--font-type-one);
    font-size: var(--font-size-small);
    font-weight: 400!important;
    color: var(--text-grey-color)!important;
}
.navbar_ul li ul{
    padding: 0;
    margin: 0;
}
.navbar_ul li ul li hr{
    padding: 0;
    margin: 0;
}
.header_buttons{
    width: 140px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}
.header_buttons .button{
   width: 120px;
   background: var(--primary-color);
   color: #fff;
   padding: 4px;
   text-align: center;
   border-radius: 2px;
}
.header_buttons .button a{
    font-family: var(--font-type-one);
    font-size: var(--font-size-small);
    color: #fff;
    text-decoration: none;
}
.header_buttons .button:first-child{
    margin-bottom: 5px;
}
.navbar-toggler:focus {
    text-decoration: none;
    outline: 0;
    box-shadow: 0 0 0 .1rem;
}
.header_buttons .button:hover{
    opacity: 0.9;
}
@media screen and (max-width: 1200px){
    .navbar_ul li a{
        font-size: var(--font-size-smallest);
    }
}
@media screen and (max-width: 992px){
    .navbar_ul li a{
        font-size: var(--font-size-medium);
    }
    .header_buttons{
        align-items: flex-start;
        padding-bottom: 25px;
    }
}
/* ====================== Header css ends ========================= */


/* ====================== Hero css starts ========================= */
.job_search_hero_main{
    display: flex;
    justify-content: center;
    position: absolute;
    top: 450px;
    left: 50%;
    transform: translate(-50%);
    z-index: 2;
}
.hero_content{
    width: 1000px;
    display: flex;
    justify-content: center;
}
/* ... */

